--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -1,95 +1,156 @@
 @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@500&family=Roboto:wght@500&display=swap');
 /* Content Stuff */
 
-#content{
+#content {
     max-width: 1600px;
     margin: 0 auto;
 }
 
-nav a{
-    text-align: center;
-    color: white;
-    text-decoration: none;
-}
-#hero-msg h1, #hero-msg h4{
-    text-align: center;
-    background-color: white;
 
-}
-.button-box{
+.button-box {
     text-align: center;
 
 }
-main section{
+
+main section {
     text-align: center;
 
 }
 
 #background {
     height: 725px;
-    background-color:#a5a4c9;
+    background-color: #a5a4c9;
 }
 
-body{
-    background-color:white; 
+body {
+    background-color: white;
     color: #1a1a75;
     font-family: 'Roboto', 'Helvetica', sans-serif;
     font-size: 22px;
+    margin: 0;
+    padding: 0;
 }
+
 h2 {
     margin: 0;
 }
-header{
-    background-color:#004429;
+
+header {
+    display: grid;
+    grid-template-columns: 150px auto;
+    background-color: #004429;
     color: white;
 }
-nav a:hover{
-    background-color:#1a1a75;
+
+nav {
+    display: flex;
+    justify-content: space-around;
+}
+
+nav a:hover {
+    background-color: #1a1a75;
+    color: white;
+
+}
+
+.logo {
+    width: 80px;
+}
+
+#logo_link {
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+}
+
+/* Hero Stuff */
+
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+
+#hero-img {
+    align-self: center;
+    width: 100%;
+}
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+
+#hero-msg h1,
+#hero-msg h4 {
+    text-align: center;
+}
+
+h1 {
+    color: #a5a4c9;
+}
+
+h4 {
     color: white;
 }
-.book, .join{
-    background-color:#a5a4c9;
+
+.book,
+.join {
+    background-color: #a5a4c9;
     text-decoration: none;
     font-size: 18px;
 }
-.book:hover, .join:hover{
-    background-color:#a5a4c9;
+
+.book:hover,
+.join:hover {
+    background-color: #a5a4c9;
 }
-.msg{
-    background-color:#004429;
+
+.msg {
+    background-color: #004429;
     line-height: 1.5em;
     padding: 35px;
-
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #a5a4c9
 }
-footer{
-    background-color:#a5a4c9;
+
+footer {
+    background-color: #a5a4c9;
 }
 
 
-nav a{
-    background-color:#004429;
+nav a {
+    background-color: #004429;
     color: white;
     padding: 35px;
 }
-nav a:hover{
+
+nav a:hover {
     background-color: #1a1a75;
     color: white;
     text-decoration: underline;
 }
-.home-title{
-    background-color:#a5a4c9;
-    color:#1a1a75;
+
+.home-title {
+    background-color: #a5a4c9;
+    color: #1a1a75;
     font-family: "Dosis", "san-serif";
     font-size: 2em;
     margin-top: 10px;
 
 }
-h4{
-    background-color:#a5a4c9;
-    color: #1a1a75;
-}
-.book, .join{
-    background-color:#004429;
+
+.book,
+.join {
+    background-color: #004429;
     color: white;
     text-decoration: none;
     border-radius: 5px;
@@ -98,65 +159,125 @@ h4{
     margin-top: 50px;
     border-radius: 5px;
 }
+
 .card-img {
     border: 10px solid #004429;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #a5a4c9;
 }
+
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+
+
+.home-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+
 main section img {
     box-sizing: border-box;
 }
-.book:hover, .join:hover{
-    background-color:#1a1a75;
+
+.card-img,
+.mountains {
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #004429;
+}
+
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+
+#background {
+    grid-column: 1/11;
+    grid-row: 4/9
+}
+
+
+.book:hover,
+.join:hover {
+    background-color: #1a1a75;
     color: white;
     text-decoration: underline;
 }
 
-.rivers-card, .camping-card, .rapids-card{
+.rivers-card,
+.camping-card,
+.rapids-card {
     margin: 200px 0;
 }
-.msg h2{
-    background-color:#004429;
+
+.msg h2 {
+    background-color: #004429;
     color: white;
 }
-.msg p{
-    background-color:#004429;
+
+.msg p {
+    background-color: #004429;
     color: white;
     font-size: .8em;
     padding-bottom: 15px;
 }
+
 /* Footer Stuff */
 
-footer{
-    background-color:#a5a4c9;
-    color: #1a1a75;
+footer {
+    background-color: #a5a4c9;
     padding: 25px 50px;
-    margin-top: 50px;
+    margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
-footer a{
-    background-color:#004429;
+
+footer a {
+    background-color: #004429;
     color: white;
     text-decoration: none;
 }
-footer a:hover{
+
+footer a:hover {
     background-color: #1a1a75;
     color: white;
 
 }
 
-footer p{
+footer p {
     font-size: 1.2em;
 }
-footer p a:hover{
+
+footer p a:hover {
     text-decoration: underline;
 }
-footer .social img{
+
+footer .social img {
     padding-top: 15px;
 }
+
 .logo {
     width: 80px;
 }
 
 #logo_link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 
 .icon {
@@ -164,3 +285,44 @@ footer .social img{
     padding-top: 10px;
 }
 
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0; 
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #a5a4c9;
+    }
+    .rivers-card, .camping-card, .rapids-card {
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
+}
