--- a/zeldatotk/styles/site-plan.css
+++ b/zeldatotk/styles/site-plan.css
@@ -2,6 +2,7 @@
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
 @import url('https://fonts.googleapis.com/css?family=IM+Fell+French+Canon+SC|Lato');
+@import url('https://fonts.googleapis.com/css2?family=Changa:wght@500&display=swap');
 
 :root {
   /* change the values below to your colors from your palette */
@@ -12,7 +13,7 @@ Fonts are separated by a | */
 
   /* change the values below to your chosen font(s) */
   --heading-font: "IM Fell French Canon SC";
-  --paragraph-font: Lato, Helvetica, sans-serif;
+  --paragraph-font: Changa;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #FF6B38;  /* headlines on a white background */ 
