--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -119,7 +119,7 @@ h4 {
     padding: 35px;
     grid-column: 6/10;
     grid-row: 6/7;
-    box-shadow: 5px 5px 10px #a5a4c9
+    box-shadow: 5px 5px 10px #a5a4c9;
 }
 
 footer {
@@ -285,43 +285,194 @@ footer .social img {
     padding-top: 10px;
 }
 
+/* Form stylings */
+form {
+    /* Center the form on the page */
+    margin: 0 auto;
+    width: 400px;
+    /* Form outline */
+    padding: 1em;
+    border: 1px solid #ccc;
+    border-radius: 1em;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+form li+li {
+    margin-top: 1em;
+}
+
+label {
+    /* Uniform size & alignment */
+    display: block;
+    width: 90px;
+}
+
+input,
+textarea {
+    /* To make sure that all text fields have the same font settings
+       By default, textareas have a monospace font */
+    font: 1em sans-serif;
+
+    /* Uniform text field size */
+    width: 100%;
+    box-sizing: border-box;
+
+    /* Match form field borders */
+    border: 1px solid #999;
+    padding: .5rem;
+}
+
+input:focus,
+textarea:focus {
+    /* Additional highlight for focused elements */
+    border-color: #000;
+}
+
+textarea {
+    /* Align multiline text fields with their labels */
+    vertical-align: top;
+
+    /* Provide space to type some text */
+    height: 5em;
+}
+
+.button {
+    /* Align buttons with the text fields */
+    padding-left: 90px;
+    /* same size as the label elements */
+}
+
+button {
+    /* This extra margin represent roughly the same space as the space
+       between the labels and their text fields */
+    margin-left: 0.5em;
+}
+
+
+#feedback {
+    background-color: antiquewhite;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    right: 0;
+    padding: .5em;
+    display: none;
+}
+
+/* Subpage */
+#rafting-img {
+    width: 100%;
+}
+.salmon-river, .gray-canyon, .grand-canyon {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    padding: 25px;
+}
+
+#river-background {
+    height: 725px;
+    background-color: #a5a4c9;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+
+#gc {
+    width: 500px;
+}
+
+.rafters {
+    width: 100%;
+    height: 100%;
+    grid-column: 2/7;
+    grid-row: 2/10;
+}
+
+.msg2 {
+    background-color:#004429;
+    padding: 35px;
+    box-shadow: 5px 5px 10px #a5a4c9;
+    grid-column: 6/10;
+    grid-row: 3/9;
+    z-index: 1;
+}
+
+.msg2 h2 {
+    background-color: #004429;
+    line-height: 1.6em;
+    color: white;
+    font-size: 1.8em;
+}
+.msg2 p {
+    background-color: #004429;
+    line-height: 1.5em;
+    color: white;
+    font-size: 1.3em;
+    padding: 31px;
+    
+}
+
+
+
 @media screen and (max-width: 900px) {
-    #hero, .home-grid {
+
+    #hero,
+    .home-grid {
         display: block;
         height: auto;
     }
-    nav, footer {
+
+    nav,
+    footer {
         flex-direction: column;
     }
+
     nav a {
         display: block;
         padding: 15px;
     }
+
     #hero {
-        margin-top: 0; 
+        margin-top: 0;
     }
+
     #hero-msg {
         margin-top: 0;
     }
+
     #hero-msg h4 {
         display: none;
     }
+
     .home-title {
         font-size: 25px;
         color: #a5a4c9;
     }
-    .rivers-card, .camping-card, .rapids-card {
+
+    .rivers-card,
+    .camping-card,
+    .rapids-card {
         margin: 50px auto;
         width: 60%;
     }
+
     #background {
         display: none;
     }
-    .mountains, .msg {
+
+    .mountains,
+    .msg {
         width: 80%;
         display: block;
         margin: 0 auto;
     }
+
     footer {
         margin-top: 25px;
     }
