--- a/mario/styles/styles.css
+++ b/mario/styles/styles.css
@@ -45,6 +45,7 @@ nav a:hover {
     background-color: #0284fa;
     color: white;
     text-decoration: underline;
+    transition: 0.4s;
 }
 
 h1 {
@@ -57,6 +58,7 @@ h2 {
 
 p {
     padding: 20px;
+    font-family: 'Ubuntu'
 }
 
 #mario {
@@ -87,4 +89,5 @@ footer a:hover {
     background-color: #0284fa;
     color: white;
     text-decoration: underline;
+    transition: 0.4s;
 }
