--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,53 @@
-*{
-    border: 2px solid blue;
+
+#content {
+    max-width: 1600px;
+    margin: 0 auto;
 }
 
+
 body {
-    width: 80%;
-    height: 80%;
+    width: 100%;
+    height: 100%;
     margin: 0 auto;
     text-align: center;
 }
 
 
 a:link, a:visited{
-color: black;
 text-decoration: none;
 }
 
-a:hover {
-    background-color: aliceblue;
-    color: steelblue;
+header {
+    font-size: 24px;
+}
+
+h1 {
+padding: 35px;
+}
+
+nav {
+    display: flex;
+    justify-content: space-around;
+ 
+}
+
+#image {
+    border: 5px solid black;
+    width: 80%;
+}
+
+nav a {
+    background-color: blue;
+    color: white;
+    padding: 25px;
+    font-size: 24px;
+    text-decoration: none;
+    border: 5px solid black;
+}
+
+nav a:hover {
+    background-color: white;
+    color: blue;
+    text-decoration: underline;
+    transition: 0.4s;
 }
